# CiberPaz-2025

./: .dockerignore  .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
backend/config/: settings.py
backend/controller/: controller.py
backend/controllers/: __init__.py  pictogram_controller.py  text_controller.py  voice_controller.py
backend/model/: llm_text.py  llm_voice.py
backend/models/: __init__.py  pictogram_model.py  text_model.py  voice_model.py
backend/schemas/: __init__.py  pictogram_schemas.py  text_schemas.py  voice_schemas.py
backend/service/: llm.py
backend/services/: __init__.py  pictogram_service.py  text_service.py  voice_service.py
frontend/static/: endpoints.js  index.html  script.js  style.css
frontend/view/: index.html  script.js  style.css
