[project]
name = "cuentista"
version = "0.1.0"
description = "Cuentista interactivo para niños con autismo usando 3 IAs locales"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "accelerate>=0.27.6",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "transformers ==4.38.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchcodec>=0.1.0",
    "soundfile>=0.12.1",
    "TTS>=0.22.0",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.17",
    "diffusers>=0.35.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]
